--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta author="kfa">
 	<script type="text/javascript" src="angular.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<meta co-author="chuck norris">
 </head>
 <body>
 <br>
